# MachUp

./: .gitignore  .gitmodules  .pylintrc  CMakeLists.txt  LICENSE  MachUp.cbp  MachUp.depend  MachUp.workspace  README.md  build.sh
AirfoilDatabase/: AirfoilCoefficientCalculator.xls  NACA_0012.json  NACA_2410.json  NACA_8410.json
Binaries/: MachUp_OSX.out  MachUp_Ubuntu_64.out
common/: CMakeLists.txt  Common.cbp  airfoil.f90  atmosphere.f90  dataset.f90  dnad.F90  json.f90  math.f90  myjson.f90  section.f90
examples/FlyingWing/: NACA_0009_profile.txt  input.json
machup/: __init__.py  geometry.py  llgrid.py  llmodel.py  models.py
python_version/machup/: helpers.py  llgrid.py
python_version/test/geometry/: test_airplane.py  test_wing.py  test_wingsegment.py
python_version/test/geometry/testairplanes/: aerodynamic_twist_wing_5sect.json  linear_spacing_test.json  multisegment_wing.json  straight_simple_plane.json  straight_wing_5sect.json  swept_wing.json  swept_wing_5sect.json  tapered_control_5sect.json  tapered_wing_5sect.json  test_plane_v2.json  vertical_wing_5sect.json  yoffset_wing_5sect.json
python_version/test/geometry/testwings/: wing_0.json
python_version/test/models/: test_llgrid.py
python_version/test/use_cases/u2_simple_plane/: test_simple_plane_u2.py  use_case_2.json
python_version/test/use_cases/u3_multisegment_wing/: test_multisegment_wing_u3.py
src/: CMakeLists.txt  loads.f90  main.f90  plane.f90  special_functions.f90  view.f90  wing.f90
test/geometry/: test_airplane.py  test_wing.py  test_wingsegment.py
test/geometry/testairplanes/: dihedral_sweep_wing.json  no_control_surface.json  single_wing.json  straight_simple_plane40.json  swept_wing.json  swept_wing_5sect.json  washout_wing_5sect.json
test/geometry/testwings/: wing_1.json
test/models/: test_llgrid.py  test_llmodel.py  test_model.py
test/use_cases/u1_from_file/: test_from_file_u1.py
test/use_cases/u2_simple_plane/: test_simple_plane_u2.py
test/use_cases/u3_multisegment_wing/: test_multisegment_wing_u3.py  use_case_3.json
